<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_label"
            android:textSize="16sp"
            android:textColor="@color/darkText"
            android:layout_marginBottom="8dp" />

        <Switch
            android:id="@+id/switchUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_unit_label"
            android:textColor="@color/darkText"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_label"
            android:textSize="16sp"
            android:textColor="@color/darkText"
            android:layout_marginBottom="8dp" />

        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_theme_label"
            android:textColor="@color/darkText" />

    </LinearLayout>
</ScrollView>
