<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".screens.HomeFragment">

    <ImageView
        android:id="@+id/headerLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/mini_logo"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWeather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:contentDescription="@string/weather_list_description"
        app:layout_constraintTop_toBottomOf="@id/headerLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_city_weather" />

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/headerLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/emptyIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@android:drawable/ic_menu_info_details"
            app:tint="@color/accentBlue"
            android:contentDescription="@string/empty_icon_description"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textEmptyMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_message"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
